2015-01-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Info Format Indirect Table): Value in 
	indirect table is for first node in file, not start of file 
	itself.

2015-01-01  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi (Output Formats, Generating HTML): be rather
	forceful in our overall goal for the HTML output (namely, be
	widely usable rather than fancy).

	* info/info-utils.c,
	* info/nodes.c,
	* info/nodes.h: 2015.
	
	* Pod-Simple-Texinfo/pod2texi.pl,
	* doc/refcard/txirefcard.tex,
	* doc/texinfo.texi,
	* info/info.c,
	* install-info/install-info.c,
	* texindex/ti.twjr,
	* tp/maintain/regenerate_cmd_tests.sh,
	* tp/maintain/regenerate_docstr.sh,
	* tp/maintain/regenerate_file_lists.pl,
	* tp/maintain/template.pod,
	* tp/texi2any.pl,
	* util/texi-elements-by-size,
	* util/texi2dvi,
	* util/texindex.c: 2015.	

2015-01-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.h (TAG): Add 'nodestart_adjusted' field and remove 
	'orig_nodestart'.
	(NODE): Remove 'nodestart' field.
	* info/nodes.c (info_create_tag): Update.

	* info/nodes.c (adjust_nodestart): Set offset of found node in 
	'nodestart_adjusted' field of NODE.
	(set_tag_nodelen, info_node_of_tag): Use 'nodestart_adjusted'
	for actual start of a node.

	* info/info-utils.c (copy_input_to_output): Set adjusted anchors 
	in 'nodestart_adjusted'.
	(scan_node_contents): Get 'nodestart' for node from TAG object 
	instead of from NODE.

	* info/nodes.c (find_node_of_tag): Arguments changed.  If node 
	not found, call convert_eols to convert file buffer in place, 
	reset the tag table, look for the node again, and reload any 
	nodes in the history of a window.

	* info/nodes.c (convert_eols): Set 'filesize' on destination 
	FILE_BUFFER.

2014-12-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.h (TAG): Struct type reintroduced (removed on
	2014-04-16).  Use to represent an entry in a file's tag table.
	All uses updated.