@@ -1,3 +1,8 @@
+2015-01-03  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* info/window.c (process_node_text, calculate_line_starts): 
+	process_node_text inlined in calculate_line_starts.
+
 2015-01-02  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* doc/texinfo.texi (Info Format Indirect Table): Value in 
